2003-06-18  Alan Modra  <amodra@bigpond.net.au>

	* lib/ld-lib.exp (default_ld_simple_link): Trim ld parms before
	trying to trim ld path.
	(default_ld_compile): Likewise for cc.

	* lib/ld-lib.exp (default_ld_simple_link): Trim ld path before
	looking for gcc match.
	(default_ld_compile): Likewise for cc.

2003-06-17  Loren James Rittle  <rittle@latour.rsch.comm.mot.com>

	* ld-undefined/undefined.exp (i?86-*-freebsd*): Remove xfail.

2003-06-16  Alan Modra  <amodra@bigpond.net.au>

	* ld-powerpc/tlsexetoc.d: Update.
	* ld-powerpc/tlsso.d: Update.
	* ld-powerpc/tlstoc.d: Update.
	* ld-powerpc/tlstocso.d: Update.
	* ld-powerpc/tlstocso.r: Update.

2003-06-16  Hans-Peter Nilsson  <hp@axis.com>

	* ld-cris/ldsym1.d: Restrict to cris-*-*elf* and cris-*-*aout*.
	* ld-cris/noglob1.d: Ditto.
	* ld-cris/badgotr1.d: Pass --underscore to gas.

2003-06-12  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* ld-mips-elf/elf-rel-got-n64-linux.d: New file.
	* ld-mips-elf/elf-rel-xgot-n64-linux.d: New file.
	* ld-mips-elf/mips-elf.exp: Use the new files for Linux.

2003-06-12  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* ld-mips-elf/relax-jalr.s: Fix testsuite breakage.
	* ld-mips-elf/relax-jalr-n32.d: Likewise.
	* ld-mips-elf/relax-jalr-n32-shared.d: Likewise.
	* ld-mips-elf/relax-jalr-n64.d: Likewise.
	* ld-mips-elf/relax-jalr-n64-shared.d: Likewise.

2003-06-11  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* ld-mips-elf/multi-got-1.d: Adjust addresses.
	* ld-mips-elf/rel32-n32.d: Likewise.

2003-06-11  Alan Modra  <amodra@bigpond.net.au>

	* ld-srec/srec.exp (run_srec_test): Remove powerpc64 xfails, and
	xfail for hppa duplicated elsewhere.

2003-06-10  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* ld-mips-elf/rel32-n32.d: Force big endian assembly.
	* ld-mips-elf/rel32-o32.d: Likewise.
	* ld-mips-elf/rel64.d: Likewise.

2003-06-10  Alan Modra  <amodra@bigpond.net.au>

	* ld-elfvsb/elfvsb.exp: Run for powerpc64 too.
	* ld-powerpc/tls.t: Update.